--- a/WpfTemplate/App.xaml
+++ b/WpfTemplate/App.xaml
@@ -9,6 +9,9 @@
                 <ResourceDictionary Source="Styles/Fonts.xaml"/>
                 <ResourceDictionary Source="Styles/Texts.xaml"/>
                 <ResourceDictionary Source="Styles/CheckBoxs.xaml"/>
+                <ResourceDictionary Source="Styles/TabControls.xaml"/>
+                
+                <ResourceDictionary Source="Styles/Scrolls.xaml"/>
                 <ResourceDictionary Source="Styles/Buttons.xaml"/>
                 <ResourceDictionary Source="Styles/Windows.xaml"/>
             </ResourceDictionary.MergedDictionaries>
